# rag-from-scratch

./: .env.example  .gitignore  pyproject.toml
rag_from_scratch/chunk/: __init__.py  semantic_chunk.py
rag_from_scratch/embed/: embedder.py
tests/chunk/: test_semantic_chunk.py
tests/fixtures/: sample_doc.txt
