[project]
name = "rag-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-text-splitters>=1.1.1",
    "ollama>=0.6.1",
    "protobuf>=7.34.1",
    "tiktoken>=0.12.0",
    "transformers>=5.5.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.151.11",
    "pytest>=9.0.3",
]
